fixed issue with display of messages - using &nbsp caused long lines to not wrap onto new line. Fixed this using the 'white-space' CSS property, and therefore didn't need the custom template filter any more

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -215,3 +215,7 @@ tr[id^="message-no-"] {
     border: 1px solid black;
     margin-top: 15px;
 }
+
+.message-text p {
+    white-space: pre-wrap;
+}
